# nsm

./: .gitignore  .pre-commit-config.yaml  minimal.py  mkdocs.yaml  pyproject.toml  readme.md  test_regression.py  tmp_linear_solver.py
docs/: api.md  index.md
examples/: periodic_regression.py  vectorize_model_demo.py
nuox/: __init__.py  linalg.py  operators.py
src/nsm/: linalg.py  optax_nullspace.py
tests/: test_linalg_solvers.py  test_operators_vectorize.py  test_optax_nullspace.py
