[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nsm"
version = "0.1.0"
description = "Null-space constrained optimization transforms for Optax."
readme = "readme.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "Hrittik Roy", email = "hroy@dtu.dk"},
]
dependencies = [
  "chex>=0.1.86",
  "jax>=0.4.26",
  "flax>=0.8.5",
  "optax>=0.2.4",
  "matfree==0.5.2",
]

[project.optional-dependencies]
dev = [
  "numpy>=1.26",
  "pytest>=8.2",
  "pytest-cases>=3.8.6",
  "ruff>=0.6",
  "matplotlib>=3.8",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25",
]
visuals = [
  "matplotlib>=3.8",
]

[project.urls]
Homepage = "https://github.com/h-roy/deep-nsm"
Documentation = "https://h-roy.github.io/deep-nsm/"
Issues = "https://github.com/h-roy/deep-nsm/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-ignore = ["E731"]
select = ["I"]
