[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nuox"
version = "0.1.0"
description = "Null-space constrained optimization transforms for Optax."
readme = "readme.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "Hrittik Roy", email = "hroy@dtu.dk"},
]
dependencies = [
  "chex>=0.1.86",
  "jax>=0.4.26",
  "flax>=0.8.5",
  "optax>=0.2.4",
  "matfree==0.5.2",
]

[project.optional-dependencies]
dev = [
  "numpy>=1.26",
  "pytest>=8.2",
  "pytest-cases>=3.8.6",
  "ruff>=0.6",
  "matplotlib>=3.8",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25",
]
visuals = [
  "matplotlib>=3.8",
]
examples = [
  "brax==0.13.0",
  "imageio==2.37.0",
  "seaborn==0.13.2",
  "tqdm==4.67.1",
  "tensorflow==2.20.0",
  "tensorflow-datasets==4.9.9",
]

[project.urls]
Homepage = "https://github.com/h-roy/nuox"
Documentation = "https://h-roy.github.io/nuox/"
Issues = "https://github.com/h-roy/nuox/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["nuox*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-ignore = ["E731"]
select = ["I"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
